--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+*{margin: 0; padding: 0; box-sizing: border-box;}
+a:link,a:visited{text-decoration: none; color: #333;}
+ul,li {list-style: none;}
+
+
+
 .App {
   text-align: center;
 }
@@ -35,4 +41,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.pagetop {
+  display: flex;
+}
+
+
+.pagenation .num {
+  padding: 10px 10px;
 }
